--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -781,7 +781,9 @@ footer .back-to-top i {
 @media (max-width: 767px){
 
   .navbar-brand {
-    float: none;
+    display: flex;
+    width: auto;
+    im
   }
   
   .menu-first {
